fix: meta tags imports

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Younes Alturkey | يونس التركي</title>
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="asset/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="asset/favicon-16x16.png">
-    <link rel="shortcut icon" href="asset/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/asset/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/asset/favicon-16x16.png">
+    <link rel="shortcut icon" href="/asset/favicon.ico">
     <!-- metatag -->
     <meta name="author" content="Younes Alturkey" />
     <meta property="og:title" content="Younes Alturkey | يونس التركي" />
     <meta property="og:url" content="https://younesalturkey.sa" />
-    <meta property="og:image" content="asset/imgs/og-card-1200x630.png" />
+    <meta property="og:image" content="/asset/imgs/og-card-1200x630.png" />
     <meta property="og:description" content="I'm a Software Engineer based in Saudi Arabia and this is my portfolio website" />
     <meta property="og:site_name" content="Younes Alturkey's Portfolio" />
     <meta name="twitter:card" content="I'm a Software Engineer based in Saudi Arabia and this is my portfolio website">
     <meta name="twitter:title" content="Younes Alturkey | يونس التركي">
     <meta name="twitter:description" content="I'm a Software Engineer based in Saudi Arabia and this is my portfolio website">
-    <meta name="twitter:image" content="asset/imgs/twitter-card-600x314.png">
+    <meta name="twitter:image" content="/asset/imgs/twitter-card-600x314.png">
     <meta id="tw_url" name="twitter:url" content="https://younesalturkey.sa">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -155,7 +155,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="100" data-tilt-max="10">
                                 <a class="gallery-link" href="https://bit-chunk.netlify.app" target="_blank">
-                                    <img src="asset/portfolio/bitchunk.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/bitchunk.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Bitchunk</h3>
@@ -179,7 +179,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://soudah-ats.netlify.app" target="_blank">
-                                    <img src="asset/portfolio/sdcats.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/sdcats.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>SDC</h3>
@@ -191,7 +191,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://2d-spaceshooter.netlify.app/" target="_blank">
-                                    <img src="asset/portfolio/spaceshooter.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/spaceshooter.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Space Shooter</h3>
@@ -203,7 +203,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://github.com/younes-alturkey/nahdi-mobile" target="_blank">
-                                    <img src="asset/portfolio/5.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/5.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Nahdi Mobile</h3>
@@ -215,7 +215,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://github.com/younes-alturkey/senken-virus" target="_blank">
-                                    <img src="asset/portfolio/6.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/6.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Senken</h3>
@@ -373,7 +373,7 @@
                                 <a href="https://www.linkedin.com/in/younes-alturkey" target="_blank"><i class="bi bi-linkedin"></i></a>
                                 <a href="https://github.com/younes-alturkey" target="_blank"><i class="bi bi-github"></i></i></a>
                                 <a href="https://twitter.com/younes_alturkey" target="_blank"><i class="bi bi-twitter"></i></a>
-                                <a href="https://medium.com/@younes-alturkey" target="_blank"><img class="social-link-img" src="asset/imgs/medium.svg"></img></a>
+                                <a href="https://medium.com/@younes-alturkey" target="_blank"><img class="social-link-img" src="/asset/imgs/medium.svg"></img></a>
                             </div>
                         </div>
                     </div>
