--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#FF1C3B" />
     <title>Younes Alturkey | يونس التركي</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/asset/favicon-32x32.png">
