--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-around">
+                <div class="row">
                     <div class="col-lg-4 col-md-6 mt-4 pt-2">
                         <div class="wrap-box">
                             <div class="icon mb-3">
