add: more services

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a class="nav-link active" onclick="scrollHomeIntoView();">Home</a></li>
             <li><a class="nav-link" onclick="scrollAboutIntoView();">About</a></li>
             <li><a class="nav-link" onclick="scrollPortfolioIntoView();">Portfolio</a></li>
-            <li><a class="nav-link" onclick="scrollServiceIntoView();">Service</a></li>
+            <li><a class="nav-link" onclick="scrollServiceIntoView();">Services</a></li>
             <li><a class="nav-link" onclick="scrollContactIntoView();">Contact</a></li>
         </ul>
     </nav>
@@ -55,7 +55,7 @@
                 <li><a class="nav-link active" onclick="scrollHomeIntoView();">Home</a></li>
             <li><a class="nav-link" onclick="scrollAboutIntoView();">About</a></li>
             <li><a class="nav-link" onclick="scrollPortfolioIntoView();">Portfolio</a></li>
-            <li><a class="nav-link" onclick="scrollServiceIntoView();">Service</a></li>
+            <li><a class="nav-link" onclick="scrollServiceIntoView();">Services</a></li>
             <li><a class="nav-link" onclick="scrollContactIntoView();">Contact</a></li>
             </ul>
         </nav>
@@ -243,7 +243,7 @@
                         <div class="who-i text-center">
                             <h3 data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">What <span class="boldi ml-2">I Do</span></h3>
                             <p data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-                                These two are my core specializations
+                                What I can offer your team
                             </p>
 
                         </div>
@@ -253,7 +253,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 pt-2">
                         <div class="wrap-box">
                             <div class="icon mb-3">
-                                <i class="bi bi-globe"></i>
+                                <i class="bi bi-display"></i>
                             </div>
                             <h3>Front End Development</h3>
                             <p class="mt-3">
@@ -270,6 +270,55 @@
                             <h3>Blockchain Development</h3>
                             <p class="mt-3">
                                 Blockchain technology is poised to revolutionize the way the digital world handles data and does business. It improves security and speeds up the exchange of information while ensuring transparency.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 mt-4 pt-2">
+                        <div class="wrap-box">
+                            <div class="icon mb-3">
+                                <i class="bi bi-server"></i>
+                            </div>
+                            <h3>Full Stack Development</h3>
+                            <p class="mt-3">
+                                The development of both front end(client side) and back end(server side) portions of web and mobile application. Full stack developers have the ability to design complete web and mobile applications.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mt-4 pt-2">
+                        <div class="wrap-box">
+                            <div class="icon mb-3">
+                                <i class="bi bi-brush-fill"></i>
+                            </div>
+                            <h3>UX/UI Design</h3>
+                            <p class="mt-3">
+                                UX (user experience) and UI (user interface) are interdependent terms. While UI deals with the interaction between users and computers, and apps, UX deals generally with a user's overall experience with a brand, product.
+                            </p>
+                        </div>
+                    </div>
+ 
+                    <div class="col-lg-4 col-md-6 mt-4 pt-2">
+                        <div class="wrap-box">
+                            <div class="icon mb-3">
+                                <i class="bi bi-bug-fill"></i>
+                            </div>
+                            <h3>Cybersecurity</h3>
+                            <p class="mt-3">
+                                The practice of protecting systems, networks, and programs from digital attacks. These cyberattacks are usually aimed at accessing, changing, or destroying sensitive information; or interrupting normal business processes.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 mt-4 pt-2">
+                        <div class="wrap-box">
+                            <div class="icon mb-3">
+                                <i class="bi bi-kanban-fill"></i>
+                            </div>
+                            <h3>Project Management</h3>
+                            <p class="mt-3">
+                                IT project management includes overseeing projects for software development, hardware installations, network upgrades, cloud computing, virtualization, data management and implementing IT services.
                             </p>
                         </div>
                     </div>
