--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 pt-2">
                         <div class="wrap-box">
                             <div class="icon mb-3">
-                                <i class="bi bi-display"></i>
+                                <i class="bi bi-display-fill"></i>
                             </div>
                             <h3>Front End Development</h3>
                             <p class="mt-3">
@@ -265,7 +265,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 pt-2">
                         <div class="wrap-box">
                             <div class="icon mb-3">
-                                <i class="bi bi-bounding-box"></i>
+                                <i class="bi bi-grid-3x3-gap-fill"></i>
                             </div>
                             <h3>Blockchain Development</h3>
                             <p class="mt-3">
@@ -405,14 +405,14 @@
                                 <a href="tel:+966538654514"><p>+966 53 865 4514</p></a>
                             </div>
                             <div class="detail-inner">
-                                <i class="bi bi-chat-dots-fill"></i>
-                                <p>WhatsApp Chat</p>
-                                <a href="https://wa.me/+966538654514" target="_blank"><p>+966 53 865 4514</p></a>
-                            </div>
-                            <div class="detail-inner">
                                 <i class="bi bi-envelope-fill"></i>
                                 <p>Email Address</p>
                                 <a href="mailto:hi@younesalturkey.sa"><p>hi@younesalturkey.sa</p></a>
+                            </div>
+                            <div class="detail-inner">
+                                <i class="bi bi-chat-dots-fill"></i>
+                                <p>WhatsApp Chat</p>
+                                <a href="https://wa.me/+966538654514" target="_blank"><p>+966 53 865 4514</p></a>
                             </div>
                             <div class="detail-inner">
                                 <i class="bi bi-geo-alt-fill"></i>
