add: sanitize code base

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -121,7 +121,7 @@
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="wrap-imgpic " data-aos="fade-up" data-aos-delay="500" data-aos-offset="0">
-                            <img class="gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25" src="/asset/hero/3.jpg" alt="poto-hero" />
+                            <img class="gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25" src="/asset/hero/younes.jpg" alt="poto-hero" />
                         </div>
                     </div>
                     <div class="col-lg-7 pr-lg-5">
@@ -204,7 +204,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://github.com/younes-alturkey/nahdi-mobile" target="_blank">
-                                    <img src="/asset/portfolio/5.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/nahdimobile.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Nahdi Mobile</h3>
@@ -216,7 +216,7 @@
                             <!-- portfolio item -->
                             <div class="item-porto gl" data-tilt-perspective="300" data-tilt-speed="400" data-tilt-max="25">
                                 <a class="gallery-link" href="https://github.com/younes-alturkey/senken-virus" target="_blank">
-                                    <img src="/asset/portfolio/6.jpg" alt="porto-poto" />
+                                    <img src="/asset/portfolio/senken.jpg" alt="porto-poto" />
                                     <div class="porto-description">
                                         <div class="overlay-holder">
                                             <h3>Senken</h3>
