--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col-lg-8">
                         <div class="who-i text-center">
                             <h3 data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">My<span class="boldi ml-2"> Work</span></h3>
-                            <p data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">Some of my profesional work for my employers and clients</p>
+                            <p data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">Some of my profesional work</p>
 
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                             </div>
                             <h3>UX/UI Design</h3>
                             <p class="mt-3">
-                                UX (user experience) and UI (user interface) are interdependent terms. While UI deals with the interaction between users and computers, and apps, UX deals generally with a user's overall experience with a brand, product.
+                                UX (user experience) and UI (user interface) are interdependent terms. While UI deals with the interaction between users and computers, and apps, UX deals generally with a user's overall experience with a brand or product.
                             </p>
                         </div>
                     </div>
@@ -389,7 +389,7 @@
                         <div class="who-i text-center">
                             <h3 data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">Start <span class="boldi ml-2">Conversation</span></h3>
                             <p data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-                                Let's discuss how we can work togather
+                                Let us work together
                             </p>
 
                         </div>
