--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="col-lg-7 pr-lg-5">
                         <div class="who-i">
                             <h3 class="pb-3" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0"><span class="boldi mr-2">Profesional</span> Summary</h3>
-                            <p style="text-align: justify;" data-aos="fade-up" data-aos-delay="400" data-aos-offset="0">Results-driven Computer Scientist from King Abdulaziz University class of 2021 passionate about developing user-friendly software applications. Excellent problem-solving skills and ability to perform well in a team.</p>
+                            <p style="text-align: justify;" data-aos="fade-up" data-aos-delay="400" data-aos-offset="0">Results-driven Software Engineer based in Saudi Arabia that is deeply passionate about developing user-friendly software applications. Excellent problem-solving skills and ability to perform well in a team.</p>
                             <p style="text-align: justify;" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">Seeking to help companies develop their product as a software engineer, as well as grow and develop my own specializations. Adept at leveraging superior communication and interpersonal skills to interact with diverse individuals and groups at all organization levels.</p>
                             <a href="/asset/docs/younes-alturkey-cv.pdf" target="_blank" class="btn button mt-3">DOWNLOAD CV</a>
                         </div>
