--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="wrap-heroifo gl pb-4 pt-5">
                             <p data-aos="fade-up" data-aos-delay="100" data-aos-offset="0">Software Engineer</p>
                             <h1 data-aos="fade-up" data-aos-delay="200" data-aos-offset="0"><span class="boldi">Younes</span> Alturkey</h1>
-                            <p class="deskrip-info" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">A rigorous, task-driven, and detail-oriented software engineer with 2 years experience in front end, blockchain, and full-stack web and mobile development.</p>
+                            <p class="deskrip-info" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">A rigorous, task-driven, and detail-oriented Software Engineer with 2 years experience in full-stack web and mobile applications development as well as blockchain technology.</p>
                             <button onclick="scrollAboutIntoView();" class="btn button mt-3">LEARN MORE</button>
                         </div>
                     </div>
