--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <h1 data-aos="fade-up" data-aos-delay="200" data-aos-offset="0"><span
                                     class="boldi">Younes</span> Alturkey</h1>
                             <p class="deskrip-info" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">A
-                                rigorous, task-driven, and detail-oriented Software Engineer with 2 years experience in
+                                rigorous, task-driven, and detail-oriented Software Engineer with years of experience in
                                 full-stack web and mobile applications development as well as blockchain technology.</p>
                             <button onclick="scrollAboutIntoView();" class="btn button mt-3">LEARN MORE</button>
                         </div>
